--- a/scss/_main_product.scss
+++ b/scss/_main_product.scss
@@ -20,7 +20,7 @@
       overflow: hidden;
       position: relative;
       display: flex;
-      
+
       img {
         min-width: 100%;
         height: 100%;
@@ -36,17 +36,15 @@
         overflow-x: scroll;
         scroll-behavior: smooth;
         scrollbar-width: 0;
-        
-        &::-webkit-scrollbar { 
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
           width: 0;
           height: 0;
-      }
-
-        img .slide {
-
         }
-
       }
+      
       .slide-nav {
         display: flex;
         position: absolute;
@@ -65,7 +63,7 @@
           cursor: pointer;
 
           &.active-slide {
-            background-color: white
+            background-color: white;
           }
         }
       }
